--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,6 @@
-*{
-  font-family: 'Roboto', sans-serif;
-}
-
 body{
     background-color: #1F2937;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header{
@@ -66,6 +63,7 @@ li{
     justify-content: center;
     column-gap: 48px;
     padding: 75px;
+    min-height: 600px;
 }
 
 .sign-up-container{
@@ -107,31 +105,86 @@ button{
 /* This has been 2  and a half hours work on this */
 
 .sectiontwo{
-    border: limegreen solid;
+    /* border: limegreen solid; */
     display: flex;
-    color: white;
+    background-color: white;
     flex-direction: column;
+    min-height: 600px;
+    justify-content: center;
+    align-items: center;
+    border-color: white;
 }
 
+.sectwotext{
+    font-weight: 1000;
+    font-size: 38px;
+}
 
 .sectwocon{
-    border: thistle dotted;
+    /* border: thistle dotted; */
     display: flex;
+    flex-direction: column;
     flex: auto;
-    gap: 20px;
-    align-content: space-between;
+    align-items: center;
     justify-content: center;
 }
 
 .boximage{
-    border: turquoise dashed;
-    max-width: 350px;
-    max-height: 350px;
+    /* border: turquoise dashed; */
+    max-width: 250px;
+    max-height: 250px;
+    border-radius: 25px; 
+}
+
+.textcon{
+    /* border: firebrick solid; */
+    display: flex;
+    gap: 78px;
+    margin-top: 10px;
+}
+/* 3 hours 10 min */
+
+.imgcon{
+    /* border: goldenrod solid; */
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    justify-content: flex-start;
 }
 
 .imgtext{
-    border: firebrick solid;
+    /* border: seagreen solid; */
     display: flex;
-    justify-content: center;
+    max-width: 225px;
+    text-align: center;
 }
-/* 3 hours 10 min */
+
+.sectionthree{
+    border: violet solid;
+    background-color: #E5E7EB;
+}
+
+.secthreetext{
+    border: tan dashed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.quote{
+    border: deeppink double;
+    display: flex;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    font-family: 'Roboto', sans-serif;
+    max-width: 800px;
+}
+
+.name{
+
+}
+
+/* 4 hours */
